# gaming-scrap

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  async_client.py  cli.py  config.example.yaml  config.py  database.py  engine.py  exporters.py  fetch.py  http_client.py  link.txt  link_checker.py  link_resolver.py  logger.py  make.bat  models.py  notifier.py  parsers.py  pyproject.toml  requirements-dev.txt  requirements.txt  scheduler.py  scraper.py  settings.py  switch_games.csv  switch_games.json  test_dodi.py  webapp.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  AUDIT.md  ROADMAP.md  source-sites.txt
output/: link_check_active.csv  link_check_recap.txt  link_check_report.csv  switch_games.csv
samples/: coolrom.txt  elamigos.txt  freelinuxpcgames.txt  nxbrew.txt  ovagames.txt  romsfun.txt  skidrowcodex.txt
sites/: base.py  config_adapter.py  registry.py  switchroms.py
sites/configs/: README.md
src/nestfetch/: __init__.py  __main__.py  async_client.py  cli.py  cli_new.py  config.py  database.py  engine.py  exporters.py  healthcheck.py  http_client.py  link_checker.py  link_resolver.py  logger.py  models.py  notifier.py  parsers.py  robots.py  scheduler.py  scraper.py  settings.py  webapp.py
src/nestfetch/sites/: __init__.py  base.py  config_adapter.py  registry.py  switchroms.py
src/nestfetch/sites/configs/: _preset_wordpress-repack.json  coolrom.json  dodi.json  elamigos.json  freelinuxpcgames.json  nxbrew.json  ovagames.json  romsfun.json  skidrowcodex.json
tests/: conftest.py  fakes.py  test_async_client.py  test_config_adapter.py  test_database.py  test_engine.py  test_exporters.py  test_healthcheck.py  test_http_client.py  test_notifier.py  test_registry_smoke.py  test_resolver.py  test_robots.py  test_scheduler.py  test_settings.py  test_webapp.py
tools/: healthcheck.py
