[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nestfetch"
version = "4.9.0"
description = "A professional, modular, multi-site game-download metadata scraper."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Citra GivenchyA", email = "givenchyacitra@gmail.com" }]
keywords = ["scraper", "roms", "download", "games", "cli", "switch"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Topic :: Internet :: WWW/HTTP",
    "Intended Audience :: Developers",
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
]

[project.optional-dependencies]
# Async fetching (Phase 3): faster large scrapes. Falls back to threads if absent.
async = ["aiohttp>=3.9.0"]
# Headless-browser fallback for JS / timer ad-gates.
browser = ["playwright>=1.44.0"]
# YAML config files (Phase 4). JSON config works with no extra deps; install
# this only if you prefer config.yaml over config.json.
config = ["pyyaml>=6.0"]
# Test tooling.
dev = ["pytest>=8.0.0"]

[project.urls]
Homepage = "https://github.com/CitraGivenchyA/nestfetch"
Changelog = "https://github.com/CitraGivenchyA/nestfetch/blob/main/CHANGELOG.md"

[project.scripts]
# Installs a `nestfetch` command that runs scraper.main().
nestfetch = "nestfetch.scraper:main"

[tool.setuptools]
# src/ layout: the importable package lives in src/nestfetch/.
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the config-driven site definitions with the package.
"nestfetch.sites" = ["configs/*.json", "configs/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
pythonpath = ["src", "tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
# A pragmatic, non-noisy rule set: pyflakes (F), pycodestyle (E/W),
# isort (I), bugbear (B), pyupgrade (UP), comprehensions (C4).
select = ["E", "W", "F", "I", "B", "UP", "C4"]
ignore = [
    "E501",  # line length is enforced by the formatter, not the linter
    "B008",  # allow function calls (config constants) as argument defaults
]

[tool.ruff.lint.per-file-ignores]
# Tests deliberately tweak sys.path before imports and use bare asserts.
"tests/*" = ["E402"]

[tool.mypy]
python_version = "3.9"
files = ["src/nestfetch"]
ignore_missing_imports = true   # optional deps (aiohttp, playwright, yaml) may be absent
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
